--- a/Capturer/Capturer/Capturer.csproj
+++ b/Capturer/Capturer/Capturer.csproj
@@ -47,16 +47,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Capturer.cs">
+    <Compile Include="FilterForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Capturer.Designer.cs">
-      <DependentUpon>Capturer.cs</DependentUpon>
+    <Compile Include="FilterForm.Designer.cs">
+      <DependentUpon>FilterForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HotKeyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HotKeyForm.Designer.cs">
+      <DependentUpon>HotKeyForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ProcessListForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProcessListForm.Designer.cs">
+      <DependentUpon>ProcessListForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Capturer.resx">
-      <DependentUpon>Capturer.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
